# greedylm

./: .env  .env.example  .gitignore  .vercelignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  GOOD_FIRST_ISSUES.md  README.md  SKILL.md  alembic.ini  check_db.py  get_agent.py  index.py  migrate.py  mkdocs.yml  package-lock.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  smoke_s2_out.txt  smoke_test_s2.py  smoke_test_s3.py  sync_db.py  test_db.py  test_db_conn.py  vercel.json  verify_s4.py
.github/workflows/: deploy.yml  main.yml
api/: index.py
contracts/: GRDL.sol  GRDLToken.sol  OversightFund.sol  StakingPool.sol
core/: .dockerignore  Dockerfile  Dockerfile.worker  alembic.ini  config.py  database.py  main.py  models.py  requirements.txt  tracing.py
core/constants/: races.py  recipes.py
daemon/: tee_check.py
infrastructure/: docker-compose.yml
migrations/: env.py
portal/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
scripts/: ARCHITECTURE.md  alembic_output.txt  cli.py  daemon_out.txt  deploy_contracts.py  generate_secrets.py  pg_logs.txt  search_test.txt  seed_world_objects.py  setup_dev.ps1  setup_test_agent.py  simulate_fauna.py  smoke_s3_out.txt  smoke_test_s3.py  sync_db.py  test_db_out.txt  test_db_out2.txt  test_phase2_backend.py  test_phase2_timed_actions.py  verify_s3_s5.py  verify_s5.py
sdk/python/: README.md  pyproject.toml
sdk/python/greedylm/: __init__.py  adapters.py  client.py  client_v2.py
tests/: conftest.py  test_api.py  test_phase2_backend.py
(+157 files in other folders)
