[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "greedylm"
version = "0.1.0"
description = "Python SDK for the GREEDYLM decentralized AI agent network"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/your-org/greedylm"

[tool.setuptools.packages.find]
where = ["."]
