[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greedylm"
version = "0.7.0"
authors = [
  { name="GREEDYLM Team", email="dev@greedylm.network" },
]
description = "Universal AI Agent SDK for Sim-to-Real Robotics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
    "numpy>=1.24.0",
]

[project.urls]
"Homepage" = "https://greedylm.network"
"Documentation" = "https://docs.greedylm.network"
"Bug Tracker" = "https://github.com/mikebt96/greedylm/issues"
